# game_of_life

./: .gitignore  CMakeLists.txt  README.md  build_wasm.sh
libs/MGL/: CMakeLists.txt  README.md
libs/MGL/include/: gamestatehandler.hpp  window.hpp
libs/MGL/src/: gamestatehandler.cpp  window.cpp
source/: main.cpp
src/: gridoflife.cpp  gridoflife.hpp  main.cpp
